# harmoxen

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
harmoxen/: Cargo.toml
harmoxen-standalone/: Cargo.toml
harmoxen-standalone/src/: main.rs
harmoxen-standalone/src/audio/: mod.rs  synth.rs
harmoxen-standalone/src/audio/synth/: adsr.rs  limiter.rs  osc.rs  svf.rs
harmoxen-standalone/src/midi/: mod.rs
harmoxen-vst/: Cargo.toml
harmoxen-vst/src/: gui.rs  lib.rs
harmoxen/src/: consts.rs  lib.rs
harmoxen/src/backend/: mod.rs
harmoxen/src/data/: axis.rs  frame.rs  line.rs  mod.rs  point.rs  range.rs  rect.rs  vec2.rs
harmoxen/src/data/icp/: mod.rs
harmoxen/src/data/layout/: marker.rs  mod.rs  pattern.rs
harmoxen/src/data/layout/pattern/: freq_input.rs  time_input.rs
harmoxen/src/data/sheet/: clipboard.rs  interval.rs  mod.rs  note.rs
harmoxen/src/state/: history.rs  layout_editor.rs  mod.rs  project.rs  settings_editor.rs  sheet_editor.rs
harmoxen/src/state/editors/: mod.rs
harmoxen/src/state/layout_editor/: freq_input.rs  time_input.rs
harmoxen/src/style/: flux.rs  mod.rs  nord.rs  one_dark.rs
harmoxen/src/ui/: layout_editor.rs  mod.rs  settings_editor.rs  sheet_editor.rs
harmoxen/src/util/: coord.rs  intersect.rs  mod.rs
harmoxen/src/widget/: mod.rs  shortcuts.rs
harmoxen/src/widget/common/: mod.rs
harmoxen/src/widget/common/dropdown/: mod.rs  renderer.rs
harmoxen/src/widget/common/overlay/: context_menu.rs  mod.rs
harmoxen/src/widget/common/parse/: mod.rs
harmoxen/src/widget/common/parse_input/: mod.rs
harmoxen/src/widget/common/range_slider/: mod.rs  style.rs
harmoxen/src/widget/common/scroll_view/: mod.rs
harmoxen/src/widget/common/stack/: mod.rs
harmoxen/src/widget/common/tab/: mod.rs  style.rs
harmoxen/src/widget/sheet_editor/: cursor.rs  interval_input.rs  marker_editor.rs  mod.rs  preview.rs  selection.rs  shortcuts.rs
harmoxen/src/widget/sheet_editor/board/: interval_input.rs  layout.rs  mod.rs  notes.rs  style.rs
harmoxen/src/widget/sheet_editor/marker_editor/: style.rs
harmoxen/src/widget/sheet_editor/preview/: style.rs
src/: commands.rs  delegate.rs  main.rs  theme.rs
src/data/: mod.rs
src/data/icp/: mod.rs
src/data/layout/: mod.rs  pattern.rs
src/data/sheet/: clipboard.rs  interval.rs  mod.rs  note.rs
src/delegate/: fileops.rs  general.rs  history.rs  layout.rs  mod.rs  settings.rs
src/server/: mod.rs  synth.rs
src/server/audio/: mod.rs  synth.rs
src/server/audio/synth/: osc.rs  svf.rs
src/server/midi/: mod.rs
src/server/synth/: adsr.rs  limiter.rs  osc.rs
src/state/: editors.rs  history.rs  mod.rs  project.rs
src/state/editors/: layout_editor.rs  settings.rs  sheet_editor.rs
src/state/editors/layout_editor/: freq_input.rs  time_input.rs
src/state/layout_input/: freq_input.rs  mod.rs  time_input.rs
src/state/sheet_editor/: layout.rs  mod.rs  sheet.rs
src/state/sheet_editor/sheet/: interval.rs
src/ui/: layout_editor.rs  main.rs  mod.rs  settings_editor.rs  sheet_editor.rs
src/ui/modal/: save.rs
src/util/: color.rs  coord.rs  frame.rs  intersect.rs  mod.rs  range.rs  ui.rs
src/widget/: cursor.rs  dropdown.rs  marker_editor.rs  mod.rs  overlay.rs  preview.rs  scroll_view.rs  sheet_editor.rs
src/widget/common/: button.rs  index_selector.rs  mod.rs  parse_lazy.rs  range_slider.rs  reversed.rs  scroll_view.rs  selector.rs  setter.rs  stack.rs  text_box.rs  updown.rs  value_selector.rs
src/widget/sheet_editor/: board.rs  cursor.rs  layout.rs  marker_editor.rs  mod.rs  notes.rs  preview.rs  selection.rs  shortcuts.rs
src/widget/sheet_editor/board/: layout.rs  notes.rs
