[package]
name = "xenharmonic-piano-roll"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"

[dependencies]
# druid = "0.6.0"
druid = { git = "https://github.com/xi-editor/druid" }
cpal = "0.11.0"
meval = "0.2.0"
derive_more = "0.99.7"
generational-arena = { version = "0.2", features = ["serde"] }
nalgebra = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.0"
