[package]
name = "harmoxen-iced"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmoxen = { path = "../harmoxen" }
iced = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_winit = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_native = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_futures = { git = "https://github.com/hecrj/iced.git", branch = "master" }
futures = "0.3"
cpal = "0.12.1"
midir = "0.7.0"
nalgebra = "0.22.0"
