[package]
name = "harmoxen-vst"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
harmoxen = { path = "../harmoxen" }
iced = "0.2"
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch = "main"}
iced_native = "0.3"
iced_wgpu = "0.3"
baseplug = { git = "https://github.com/wrl/baseplug.git", branch="trunk" }
baseview = { git = "https://github.com/RustAudio/baseview", branch = "master" }
raw-window-handle = "0.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
vst = "0.2"
log = "0.4"
log-panics = "2.0.0"

[lib]
name = "harmoxen_vst"
crate-type = ["cdylib"]
