[package]
name = "harmoxen"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
iced = { git = "https://github.com/hecrj/iced.git", branch = "master", features = [ "debug", "tokio" ]}
iced_native = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_wgpu = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_winit = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_graphics = { git = "https://github.com/hecrj/iced.git", branch = "master" }
iced_style = { git = "https://github.com/hecrj/iced.git", branch = "master" }
serde = { version = "1.0.116", features = ["derive"] }
generational-arena = { version = "0.2.8", features = ["serde"] }
lyon_geom = "0.16.2"
derive_more = "0.99.10"
meval = "0.2.0"
