[package]
name = "harmoxen"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
iced = { version = "0.2", features = [ "debug", "tokio", "canvas" ]}
iced_baseview = { git = "https://github.com/BillyDM/iced_baseview", branch = "main"}
iced_futures = "0.2"
iced_graphics = "0.1"
iced_native = "0.3"
iced_style = "0.2"
iced_wgpu = "0.3"
serde = { version = "1.0.116", features = ["derive"] }
generational-arena = { version = "0.2.8", features = ["serde"] }
lyon_geom = "0.16.2"
derive_more = "0.99.10"
meval = "0.2.0"
rfd = "0.2.1"
ron = "0.6.4"